# WRISC-V

./: .gitignore  CMakeLists.txt  README.md
src/: bus.h  busDevice.h  cpu.h  encoding.h  isa.h  machine.h  main.cpp  ram.cpp  ram.h
src/extensions/: extension.h  rv32a_impl.h  rv32i_impl.h  rv32m_impl.h  rv32zicsr_impl.h  rv32zifencei_impl.h  utils.h
test/: test_rv32i.cpp  test_rv32m.cpp
